[project]
name = "click-repl"
description = "REPL plugin for Click"
version = "1.3.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--cov=click_repl",
    "--cov-report=html:htmlcov"
]

testpaths = [
    "tests",
]

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90
src = ["src", "tests"]
target-version = "py37"

[tool.mypy]
mypy_path = "src"

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
