[metadata]
name = click-repl
version = attr: click_repl.__version__
description = REPL plugin for Click
long_description = file: README.md

url = https://github.com/untitaker/click-repl

author = Markus Unterwaditzer
author_email = markus@unterwaditzer.net

license = MIT
license_files = LICENSE

platforms = any

keywords = click, click-repl, repl, click_repl

project_urls =
    Bug Tracker = https://github.com/click-contrib/click-repl/issues
    Source Code = https://github.com/click-contrib/click-repl/
    Documentation = https://github.com/click-contrib/click-repl#readme

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Terminals
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages=
  click_repl

package_dir=
  =src

install_requires =
  click>=6.0
  prompt_toolkit>=2.0.10

python_requires = >=2.7, >=3.7
zip_safe = True

[options.extras_require]
testing =
  pytest
  pytest-cov
  mypy
  flake8
  tox

[options.package_data]
click_repl = py.typed

[flake8]
max-line-length = 90
