[metadata]
name = click-repl
version = attr: click_repl.__version__
description = REPL plugin for Click
long_description = file: README.md

url = https://github.com/untitaker/click-repl

author = Markus Unterwaditzer
author_email = markus@unterwaditzer.net

maintainer = Asif Saif Uddin
maintainer_email = auvipy@gmail.com

license = MIT
license_files = LICENSE

platforms = any

keywords = click, click-repl, repl, click_repl

project_urls =
    Bug Tracker = https://github.com/click-contrib/click-repl/issues
    Source Code = https://github.com/click-contrib/click-repl/
    Documentation = https://github.com/click-contrib/click-repl#readme

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Terminals
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages=
  click_repl

package_dir=
  =src

install_requires =
  click>=7.0
  prompt_toolkit>=3.0.0

python_requires = >=3.6
zip_safe = True

[options.extras_require]
testing =
  pytest
  pytest-cov
  mypy
  ruff
  tox

[options.package_data]
click_repl = py.typed

[flake8]
ignore = E203, W503
max-line-length = 90
